--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,8 @@
         <link rel="stylesheet" href="/style.css" />
     </head>
     <body>
+        <div id="fps"></div>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <script type="module" src="/dist/index.js"></script>
+        <script type="module" src="/dist/Main.js"></script>
     </body>
 </html>
